Add keyboard shortcuts, icons, menu groups, and split pane persistence
Features:
- Keyboard shortcuts: Ctrl+1 to Ctrl+5 for quick view access
- Icons: UIManager icons for menu items and toolbar buttons
- Menu groups: Views organized into Analyse, Verwaltung, Navigation submenus
- Split pane persistence: Divider positions saved/restored via config.properties

Also includes:
- Component names (setName) for AssertJ Swing test compatibility
- Updated tests for new menu structure

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>